--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+
+
   "name": "reactapp",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "express": "^4.17.1",
+    "socket.io": "^2.4.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
